--- a/app/styles.scss
+++ b/app/styles.scss
@@ -1,15 +1,71 @@
 body {
   margin: 0;
   padding: 0;
+  background: #fafafa;
+  cursor: default;
 }
 
-.card {
-  width: 60px;
-  height: 100px;
-  background: #fafafa;
-  margin: 10px;
-  border-radius: 8px;
+h1 {
+  text-align: center;
+  margin: 20px;
+  font-family: sans-serif;
+}
+
+// ---
+// Card container
+// ---
+.container {
+  width: 600px;
+  margin: 0 auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-flow: row wrap;
+}
+
+// ---
+// Card
+// ---
+.card {
+  width: 90px;
+  height: 120px;
+  margin: 10px;
+  perspective: 1000px;
+
+  &:hover {
+    .card__content {
+      transform: rotateY(180deg);
+    }
+  }
+
+  .card__content {
+    transition: 0.3s;
+    transform-style: preserve-3d;
+    position: relative;
+  }
+
+  .card__front,
+  .card__back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90px;
+    height: 120px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    box-shadow: 0 1px 3px rgba(#000, 0.1);
+    background: #fff;
+  }
+
+  .card__front {
+    z-index: 2;
+    transform: rotateY(0deg);
+
+  }
+
+  .card__back {
+    transform: rotateY(180deg);
+  }
 }
